# keyglow

./: .gitignore  CLAUDE.md  Makefile  Package.swift  README.md  index.html  package-lock.json  package.json  settings.html  vite.config.ts
.github/workflows/: release.yml
Resources/: AppIcon.icns  Info.plist
Sources/KeyGlow/: AppDelegate.swift  CameraMonitor.swift  GradientSlider.swift  KeyLightService.swift  SliderMenuItem.swift
src/: main.ts  settings.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
