[package]
name = "keyglow"
version = "0.1.0"
description = "Automatically control your Elgato Key Light based on camera activity"
authors = ["tomas.ave"]
edition = "2021"

[lib]
name = "keyglow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
reqwest = { version = "0.12", features = ["blocking"] }
